added cloverd dependencies

--- a/experiments/HalfPlanes.ipynb
+++ b/experiments/HalfPlanes.ipynb
@@ -19,7 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import context\n",
-    "from ccn import Constraint, ConstraintsGroup\n",
+    "from cloverd.propositional_constraints.constraint import Constraint\n",
+    "from cloverd.propositional_constraints.constraints_group import ConstraintsGroup\n",
     "from shapes import HalfPlane\n",
     "from experiment import Experiment\n",
     "\n",
