--- a/experiments/Stratification.ipynb
+++ b/experiments/Stratification.ipynb
@@ -15,11 +15,13 @@
    ],
    "source": [
     "import torch\n",
-    "import context\n",
-    "from ccn import Constraint, ConstraintsGroup, Clause, ClausesGroup, Literal, ConstraintsLayer\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "import numpy as np\n",
+    "from cloverd.propositional_constraints.clauses_group import ClausesGroup\n",
+    "from cloverd.propositional_constraints.constraints_group import ConstraintsGroup\n",
+    "from cloverd.propositional_constraints.constraints_layer import ConstraintsLayer\n",
+    "from cloverd.propositional_constraints.literal import Literal\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(device)"
