--- a/experiments/MidCircle.ipynb
+++ b/experiments/MidCircle.ipynb
@@ -22,8 +22,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch\n",
-    "from cloverd.propositional_constraints.clause import Clause\n",
-    "from cloverd.propositional_constraints.clauses_group import ClausesGroup\n",
+    "from pishield.propositional_constraints.clause import Clause\n",
+    "from pishield.propositional_constraints.clauses_group import ClausesGroup\n",
     "from torch import nn\n",
     "\n",
     "from experiment import Experiment\n",
