--- a/experiments/Rectangles.ipynb
+++ b/experiments/Rectangles.ipynb
@@ -15,10 +15,10 @@
    ],
    "source": [
     "import torch\n",
-    "from cloverd.classes import Constraint\n",
-    "from cloverd.propositional_constraints.clause import Clause\n",
-    "from cloverd.propositional_constraints.clauses_group import ClausesGroup\n",
-    "from cloverd.propositional_constraints.constraints_group import ConstraintsGroup\n",
+    "from pishield.classes import Constraint\n",
+    "from pishield.propositional_constraints.clause import Clause\n",
+    "from pishield.propositional_constraints.clauses_group import ClausesGroup\n",
+    "from pishield.propositional_constraints.constraints_group import ConstraintsGroup\n",
     "from torch import nn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
