--- a/experiments/Stratification.ipynb
+++ b/experiments/Stratification.ipynb
@@ -18,10 +18,10 @@
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "import numpy as np\n",
-    "from cloverd.propositional_constraints.clauses_group import ClausesGroup\n",
-    "from cloverd.propositional_constraints.constraints_group import ConstraintsGroup\n",
-    "from cloverd.propositional_constraints.constraints_layer import ConstraintsLayer\n",
-    "from cloverd.propositional_constraints.literal import Literal\n",
+    "from pishield.propositional_constraints.clauses_group import ClausesGroup\n",
+    "from pishield.propositional_constraints.constraints_group import ConstraintsGroup\n",
+    "from pishield.propositional_constraints.constraints_layer import ConstraintsLayer\n",
+    "from pishield.propositional_constraints.literal import Literal\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(device)"
