added a description of the task and input

--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -3,7 +3,24 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Rectangles Example"
+    "# Constrained Learning of Rectangles"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This notebook shows how to use PiShield for a classification task, where two rectangles R0 and R1 are used to define two different classes.\n",
+    "\n",
+    "**Task**: train a neural network to learn two classes:  \n",
+    "   - Class A is R0\n",
+    "   - Class B is the union of R0 and R1.\n",
+    "      \n",
+    "**Training Data**: 2500 points.\n",
+    "\n",
+    "**Constraint**: Class A &rarr; Class B. "
    ],
    "metadata": {
     "collapsed": false
@@ -11,7 +28,16 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<torch._C.Generator at 0x7fc0e5ad57d0>"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "import time\n",
@@ -34,8 +60,8 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-06T11:28:58.196421254Z",
-     "start_time": "2024-02-06T11:28:56.978019282Z"
+     "end_time": "2024-02-06T19:56:05.891874300Z",
+     "start_time": "2024-02-06T19:56:04.762063039Z"
     }
    },
    "execution_count": 1
@@ -52,8 +78,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-06T11:28:58.412711092Z",
-     "start_time": "2024-02-06T11:28:58.200074659Z"
+     "end_time": "2024-02-06T19:56:06.120096410Z",
+     "start_time": "2024-02-06T19:56:05.892023322Z"
     }
    },
    "outputs": [
@@ -102,8 +128,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-06T11:28:58.420133072Z",
-     "start_time": "2024-02-06T11:28:58.419281119Z"
+     "end_time": "2024-02-06T19:56:06.136226075Z",
+     "start_time": "2024-02-06T19:56:06.132275290Z"
     }
    },
    "outputs": [],
@@ -177,8 +203,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-06T11:29:13.359547727Z",
-     "start_time": "2024-02-06T11:28:58.422403295Z"
+     "end_time": "2024-02-06T19:56:16.456386199Z",
+     "start_time": "2024-02-06T19:56:06.135841017Z"
     }
    },
    "outputs": [
@@ -187,7 +213,7 @@
      "output_type": "stream",
      "text": [
       "Using auto mode ::: Detected propositional constraints!\n",
-      "[] [<pishield.propositional_constraints.constraint.Constraint object at 0x7fc7dac6f890>]\n",
+      "[] [<pishield.propositional_constraints.constraint.Constraint object at 0x7fc0e118a510>]\n",
       "head 1 with old rules 1\n",
       "head 1 with new rules 1\n",
       "Generated 1 strata of constraints with None centrality\n",
@@ -195,7 +221,7 @@
       "Epoch 100, loss: 0.224294 [  100/  400]\n",
       "Epoch 200, loss: 0.110360 [  200/  400]\n",
       "Epoch 300, loss: 0.082923 [  300/  400]\n",
-      "Saved experiment at ./models/rectangles-1707218949\n"
+      "Saved experiment at ./models/rectangles-1707249374\n"
      ]
     },
     {
@@ -228,8 +254,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-06T11:29:18.109319446Z",
-     "start_time": "2024-02-06T11:29:13.353888308Z"
+     "end_time": "2024-02-06T19:56:18.720461097Z",
+     "start_time": "2024-02-06T19:56:16.459310280Z"
     }
    },
    "outputs": [
