--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Constrained Learning of Rectangles"
+    "# PiShield for learning shapes with requirements "
    ],
    "metadata": {
     "collapsed": false
@@ -20,7 +20,7 @@
     "      \n",
     "**Training Data**: 2500 points.\n",
     "\n",
-    "**Constraint**: Class A &rarr; Class B. "
+    "**Requirement**: Class A &rarr; Class B. "
    ],
    "metadata": {
     "collapsed": false
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x7fc0e5ad57d0>"
+      "text/plain": "<torch._C.Generator at 0x7f8dd70617d0>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -53,15 +53,15 @@
     "from plotting import plotting_experiment_results_net\n",
     "from shapes import Rectangle, ShapeDataset\n",
     "\n",
-    "from pishield.constraint_layer import build_pishield_layer\n",
+    "from pishield.shield_layer import build_shield_layer\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "torch.manual_seed(2)"
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-06T19:56:05.891874300Z",
-     "start_time": "2024-02-06T19:56:04.762063039Z"
+     "end_time": "2024-02-08T01:32:24.686172042Z",
+     "start_time": "2024-02-08T01:32:23.383135207Z"
     }
    },
    "execution_count": 1
@@ -78,8 +78,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-06T19:56:06.120096410Z",
-     "start_time": "2024-02-06T19:56:05.892023322Z"
+     "end_time": "2024-02-08T01:32:24.886640199Z",
+     "start_time": "2024-02-08T01:32:24.685577541Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
     "ax[1].set_facecolor(c1)\n",
     "plt.show()\n",
     "\n",
-    "constraints_path = '../constraints/rectangles'"
+    "requirements_path = '../constraints/rectangles'"
    ]
   },
   {
@@ -128,14 +128,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-06T19:56:06.136226075Z",
-     "start_time": "2024-02-06T19:56:06.132275290Z"
+     "end_time": "2024-02-08T01:32:24.903317027Z",
+     "start_time": "2024-02-08T01:32:24.892751070Z"
     }
    },
    "outputs": [],
    "source": [
     "class PiShield_NeuralNetwork(torch.nn.Module):\n",
-    "    def __init__(self, shapes, constraints_path, points=2500, batch_size=2500, learning_rate=1e-1, hidden_dim=20):\n",
+    "    def __init__(self, shapes, requirements_path, points=2500, batch_size=2500, learning_rate=1e-1, hidden_dim=20):\n",
     "        super(PiShield_NeuralNetwork, self).__init__()\n",
     "\n",
     "        self.linear = nn.Sequential(\n",
@@ -149,7 +149,7 @@
     "        self.loss_fn = nn.BCELoss()\n",
     "        self.optimizer = torch.optim.Adam(self.parameters(), lr = learning_rate, betas = (0.9, 0.999))\n",
     "        \n",
-    "        self.clayer = build_pishield_layer(len(shapes), constraints_path, ordering_choice=None)\n",
+    "        self.clayer = build_shield_layer(len(shapes), requirements_path, ordering_choice=None)\n",
     "        \n",
     "    def prepare_dataloaders(self, shapes, points, batch_size):\n",
     "        train_data = ShapeDataset(shapes, points)\n",
@@ -203,8 +203,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-06T19:56:16.456386199Z",
-     "start_time": "2024-02-06T19:56:06.135841017Z"
+     "end_time": "2024-02-08T01:32:36.001478972Z",
+     "start_time": "2024-02-08T01:32:24.897426776Z"
     }
    },
    "outputs": [
@@ -212,8 +212,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using auto mode ::: Detected propositional constraints!\n",
-      "[] [<pishield.propositional_constraints.constraint.Constraint object at 0x7fc0e118a510>]\n",
+      "Using auto mode ::: Detected propositional requirements!\n",
+      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f8dd2de1010>]\n",
       "head 1 with old rules 1\n",
       "head 1 with new rules 1\n",
       "Generated 1 strata of constraints with None centrality\n",
@@ -221,7 +221,7 @@
       "Epoch 100, loss: 0.224294 [  100/  400]\n",
       "Epoch 200, loss: 0.110360 [  200/  400]\n",
       "Epoch 300, loss: 0.082923 [  300/  400]\n",
-      "Saved experiment at ./models/rectangles-1707249374\n"
+      "Saved experiment at ./models/rectangles-1707355953\n"
      ]
     },
     {
@@ -234,7 +234,7 @@
     }
    ],
    "source": [
-    "model = PiShield_NeuralNetwork(shapes, constraints_path)\n",
+    "model = PiShield_NeuralNetwork(shapes, requirements_path)\n",
     "model.run(epochs=400)\n",
     "model.save()\n",
     "plotting_experiment_results_net(model, model.clayer, rectangle0, rectangle1)\n",
@@ -254,8 +254,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-06T19:56:18.720461097Z",
-     "start_time": "2024-02-06T19:56:16.459310280Z"
+     "end_time": "2024-02-08T01:32:38.311504895Z",
+     "start_time": "2024-02-08T01:32:36.003580117Z"
     }
    },
    "outputs": [
@@ -269,7 +269,7 @@
     }
    ],
    "source": [
-    "model = torch.load('./models/rectangles-1707179045.pth')  # model trained for 5000 epochs\n",
+    "model = torch.load('./models/rectangles-1707355817.pth')  # model trained for 5000 epochs\n",
     "plotting_experiment_results_net(model, model.clayer, rectangle0, rectangle1)\n",
     "plt.show()"
    ]
