--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x7f8dd70617d0>"
+      "text/plain": "<torch._C.Generator at 0x7fd684d9d7d0>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -60,8 +60,8 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:32:24.686172042Z",
-     "start_time": "2024-02-08T01:32:23.383135207Z"
+     "end_time": "2024-02-08T01:41:56.324626460Z",
+     "start_time": "2024-02-08T01:41:55.249492807Z"
     }
    },
    "execution_count": 1
@@ -78,8 +78,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:32:24.886640199Z",
-     "start_time": "2024-02-08T01:32:24.685577541Z"
+     "end_time": "2024-02-08T01:41:56.534377050Z",
+     "start_time": "2024-02-08T01:41:56.328509241Z"
     }
    },
    "outputs": [
@@ -128,8 +128,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:32:24.903317027Z",
-     "start_time": "2024-02-08T01:32:24.892751070Z"
+     "end_time": "2024-02-08T01:41:56.548719342Z",
+     "start_time": "2024-02-08T01:41:56.544811828Z"
     }
    },
    "outputs": [],
@@ -203,8 +203,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:32:36.001478972Z",
-     "start_time": "2024-02-08T01:32:24.897426776Z"
+     "end_time": "2024-02-08T01:42:08.323335188Z",
+     "start_time": "2024-02-08T01:41:56.550291833Z"
     }
    },
    "outputs": [
@@ -213,7 +213,7 @@
      "output_type": "stream",
      "text": [
       "Using auto mode ::: Detected propositional requirements!\n",
-      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f8dd2de1010>]\n",
+      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7fd6809cd610>]\n",
       "head 1 with old rules 1\n",
       "head 1 with new rules 1\n",
       "Generated 1 strata of constraints with None centrality\n",
@@ -221,7 +221,7 @@
       "Epoch 100, loss: 0.224294 [  100/  400]\n",
       "Epoch 200, loss: 0.110360 [  200/  400]\n",
       "Epoch 300, loss: 0.082923 [  300/  400]\n",
-      "Saved experiment at ./models/rectangles-1707355953\n"
+      "Saved experiment at ./models/rectangles-1707356525\n"
      ]
     },
     {
@@ -254,8 +254,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:32:38.311504895Z",
-     "start_time": "2024-02-08T01:32:36.003580117Z"
+     "end_time": "2024-02-08T01:42:11.033592303Z",
+     "start_time": "2024-02-08T01:42:08.327528012Z"
     }
    },
    "outputs": [
