--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This notebook shows how to use PiShield for a classification task, where two rectangles R0 and R1 are used to define two different classes.\n",
+    "This notebook shows how to use [PiShield](https://github.com/mihaela-stoian/PiShield) for a classification task, where two rectangles R0 and R1 are used to define two different classes.\n",
     "\n",
     "**Task**: train a neural network to learn two classes:  \n",
     "   - Class A is R0\n",
