--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -12,13 +12,30 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This notebook shows how to use [PiShield](https://github.com/mihaela-stoian/PiShield) for a classification task, where two rectangles R0 and R1 are used to define two different classes.\n",
+    "**Problem**: Hierarchical Multi-label Classification problem, which is a multi-label classification problem whose labels are organised in a hierarchical structure.\n",
+    "\n",
+    "**Example of a simple constraint from a functional genomics application**: \n",
+    "if a protein belongs to the functional category bionsynthesis of glutamine, then it also belongs to amino acid metabolism functional category.\n",
+    "\n",
+    "Let Class A be *bionsynthesis of glutamine* and Class B be *amino acid metabolism*.\n",
+    "Then our requirement can be expressed as: Class A &rarr; Class B. \n",
+    "This is an example of a hierarchical constraint, which we will simplify in what follows.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "This notebook shows how to use [PiShield](https://github.com/mihaela-stoian/PiShield) for a hierarchical multi-label classification problem, where two rectangles R0 and R1 are used to define two different classes.\n",
     "\n",
     "**Task**: train a neural network to learn two classes:  \n",
     "   - Class A is R0\n",
     "   - Class B is the union of R0 and R1.\n",
     "      \n",
-    "**Training Data**: 2500 points.\n",
+    "**Training Data**: 2500 points, identified by their (x,y) coordinates, and their associated sets of classes.\n",
     "\n",
     "**Requirement**: Class A &rarr; Class B. "
    ],
@@ -31,7 +48,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x7fd684d9d7d0>"
+      "text/plain": "<torch._C.Generator at 0x7f19d5b057d0>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -60,8 +77,8 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:41:56.324626460Z",
-     "start_time": "2024-02-08T01:41:55.249492807Z"
+     "end_time": "2024-02-18T12:35:34.139348797Z",
+     "start_time": "2024-02-18T12:35:32.507667445Z"
     }
    },
    "execution_count": 1
@@ -78,8 +95,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:41:56.534377050Z",
-     "start_time": "2024-02-08T01:41:56.328509241Z"
+     "end_time": "2024-02-18T12:35:34.379918905Z",
+     "start_time": "2024-02-18T12:35:34.112031204Z"
     }
    },
    "outputs": [
@@ -128,8 +145,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:41:56.548719342Z",
-     "start_time": "2024-02-08T01:41:56.544811828Z"
+     "end_time": "2024-02-18T12:35:34.405822466Z",
+     "start_time": "2024-02-18T12:35:34.384787695Z"
     }
    },
    "outputs": [],
@@ -203,8 +220,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:42:08.323335188Z",
-     "start_time": "2024-02-08T01:41:56.550291833Z"
+     "end_time": "2024-02-18T12:35:43.997394323Z",
+     "start_time": "2024-02-18T12:35:34.400874326Z"
     }
    },
    "outputs": [
@@ -213,7 +230,7 @@
      "output_type": "stream",
      "text": [
       "Using auto mode ::: Detected propositional requirements!\n",
-      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7fd6809cd610>]\n",
+      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f19d2e25d50>]\n",
       "head 1 with old rules 1\n",
       "head 1 with new rules 1\n",
       "Generated 1 strata of constraints with None centrality\n",
@@ -221,7 +238,7 @@
       "Epoch 100, loss: 0.224294 [  100/  400]\n",
       "Epoch 200, loss: 0.110360 [  200/  400]\n",
       "Epoch 300, loss: 0.082923 [  300/  400]\n",
-      "Saved experiment at ./models/rectangles-1707356525\n"
+      "Saved experiment at ./models/rectangles-1708259742\n"
      ]
     },
     {
@@ -254,8 +271,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-08T01:42:11.033592303Z",
-     "start_time": "2024-02-08T01:42:08.327528012Z"
+     "end_time": "2024-02-18T12:35:45.769897633Z",
+     "start_time": "2024-02-18T12:35:43.996513445Z"
     }
    },
    "outputs": [
