--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Let Class A be *bionsynthesis of glutamine* and Class B be *amino acid metabolism*.\n",
     "Then our requirement can be expressed as: Class A &rarr; Class B. \n",
-    "This is an example of a hierarchical constraint, which we will simplify in what follows.\n"
+    "This is an example of a hierarchical constraint, which we will simplify in what follows."
    ],
    "metadata": {
     "collapsed": false
