--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -28,7 +28,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "\n",
+    "## Task Description\n",
     "This notebook shows how to use [PiShield](https://github.com/mihaela-stoian/PiShield) for a hierarchical multi-label classification problem, where two rectangles R0 and R1 are used to define two different classes.\n",
     "\n",
     "**Task**: train a neural network to learn two classes:  \n",
