--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "## Define the requirements\n",
     "\n",
-    "If the classes are ordered as (Class A, Class B), and if the requirement is Class A &rarr; Class B, then it can be expressed in conjunctive normal form as follows, to be recognised by PiShield:\n",
+    "If the classes are ordered as (Class A, Class B), then the requirement Class A &rarr; Class B can be written as follows to be recognised by PiShield:\n",
     "\n",
     "not y_0 or y_1"
    ]
