--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -23,14 +23,14 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:27:33.004477346Z",
-     "start_time": "2024-02-18T21:27:31.859103767Z"
+     "end_time": "2024-02-18T21:33:13.858335406Z",
+     "start_time": "2024-02-18T21:33:11.806530173Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x7f88e01dd7d0>"
+      "text/plain": "<torch._C.Generator at 0x7f6d858317d0>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -64,8 +64,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:27:33.005537567Z",
-     "start_time": "2024-02-18T21:27:32.995452916Z"
+     "end_time": "2024-02-18T21:33:13.859210532Z",
+     "start_time": "2024-02-18T21:33:13.851178974Z"
     }
    },
    "outputs": [],
@@ -86,11 +86,22 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "**Requirement example from a functional genomics application**:\n",
+    "if a protein belongs to the functional category bionsynthesis of glutamine, then it also belongs to amino acid metabolism category."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
    "source": [
     "## Task Description\n",
+    "\n",
     "This notebook shows how to use [PiShield](https://github.com/mihaela-stoian/PiShield) for a **hierarchical multi-label** classification problem, where two rectangles R0 and R1 are used to define two different classes:\n",
     "  - Class A contains points in R0,\n",
     "   - Class B contains points in the union of R0 and R1.\n",
@@ -107,8 +118,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:27:33.230702236Z",
-     "start_time": "2024-02-18T21:27:33.004518084Z"
+     "end_time": "2024-02-18T21:33:14.108742372Z",
+     "start_time": "2024-02-18T21:33:13.851426697Z"
     }
    },
    "outputs": [
@@ -146,11 +157,7 @@
     "\n",
     "If the classes are ordered as (Class A, Class B), then the requirement Class A &rarr; Class B can be written as follows to be recognised by PiShield:\n",
     "\n",
-    "not y_0 or y_1\n",
-    "\n",
-    "\n",
-    "**Example requirement from a real-world functional genomics application with the same Class A &rarr; Class B form**: \n",
-    "if a protein belongs to the functional category bionsynthesis of glutamine, then it also belongs to amino acid metabolism functional category."
+    "not y_0 or y_1\n"
    ]
   },
   {
@@ -158,8 +165,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:27:33.453250442Z",
-     "start_time": "2024-02-18T21:27:33.234507887Z"
+     "end_time": "2024-02-18T21:33:14.343805044Z",
+     "start_time": "2024-02-18T21:33:14.111198810Z"
     }
    },
    "outputs": [
@@ -190,8 +197,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:27:33.499585422Z",
-     "start_time": "2024-02-18T21:27:33.455413740Z"
+     "end_time": "2024-02-18T21:33:14.357815182Z",
+     "start_time": "2024-02-18T21:33:14.356679949Z"
     }
    },
    "outputs": [],
@@ -265,8 +272,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:27:45.363097335Z",
-     "start_time": "2024-02-18T21:27:33.499419874Z"
+     "end_time": "2024-02-18T21:33:29.421522208Z",
+     "start_time": "2024-02-18T21:33:14.360818285Z"
     }
    },
    "outputs": [
@@ -275,7 +282,7 @@
      "output_type": "stream",
      "text": [
       "Using auto mode ::: Detected propositional requirements!\n",
-      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f88bdbf3950>]\n",
+      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f6d81da0550>]\n",
       "head 1 with old rules 1\n",
       "head 1 with new rules 1\n",
       "Generated 1 strata of constraints with None centrality\n",
@@ -283,7 +290,7 @@
       "Epoch 100, loss: 0.224294 [  100/  400]\n",
       "Epoch 200, loss: 0.110360 [  200/  400]\n",
       "Epoch 300, loss: 0.082923 [  300/  400]\n",
-      "Saved experiment at ./models/rectangles-1708291662\n"
+      "Saved experiment at ./models/rectangles-1708292007\n"
      ]
     },
     {
@@ -316,8 +323,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:27:47.832547155Z",
-     "start_time": "2024-02-18T21:27:45.363887660Z"
+     "end_time": "2024-02-18T21:33:32.368259132Z",
+     "start_time": "2024-02-18T21:33:29.421036821Z"
     }
    },
    "outputs": [
