--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:33:13.858335406Z",
-     "start_time": "2024-02-18T21:33:11.806530173Z"
+     "end_time": "2024-02-18T21:42:08.018670025Z",
+     "start_time": "2024-02-18T21:42:08.001309632Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x7f6d858317d0>"
+      "text/plain": "<torch._C.Generator at 0x7f33c44e9810>"
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:33:13.859210532Z",
-     "start_time": "2024-02-18T21:33:13.851178974Z"
+     "end_time": "2024-02-18T21:42:08.046639304Z",
+     "start_time": "2024-02-18T21:42:08.018401428Z"
     }
    },
    "outputs": [],
@@ -106,20 +106,20 @@
     "  - Class A contains points in R0,\n",
     "   - Class B contains points in the union of R0 and R1.\n",
     "\n",
-    "**Task**: train a neural network to classify each point in a 1-by-1 grid by their position such that if they fall into rectangle R0, they are assigned both class A and class B, and if they fall into rectangle R1 here, they should be assigned class B.\n",
-    "     \n",
-    "**Training Data**: 2500 points, identified by their (x,y) coordinates, and their associated sets of classes.\n",
+    "**Requirement**: Class A &rarr; Class B. \n",
     "\n",
-    "**Requirement**: Class A &rarr; Class B. "
+    "**Task**: train a neural network to classify each point in a 1-by-1 grid by its position such that if they fall into rectangle R0, they are assigned **both** class A and class B!\n",
+    "     \n",
+    "**Training Data**: 2500 points, identified by their (x,y) coordinates, and their associated sets of classes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:33:14.108742372Z",
-     "start_time": "2024-02-18T21:33:13.851426697Z"
+     "end_time": "2024-02-18T21:42:08.227336110Z",
+     "start_time": "2024-02-18T21:42:08.047185570Z"
     }
    },
    "outputs": [
@@ -162,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:33:14.343805044Z",
-     "start_time": "2024-02-18T21:33:14.111198810Z"
+     "end_time": "2024-02-18T21:42:08.438333067Z",
+     "start_time": "2024-02-18T21:42:08.227200870Z"
     }
    },
    "outputs": [
@@ -193,12 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:33:14.357815182Z",
-     "start_time": "2024-02-18T21:33:14.356679949Z"
+     "end_time": "2024-02-18T21:42:08.463612323Z",
+     "start_time": "2024-02-18T21:42:08.454456210Z"
     }
    },
    "outputs": [],
@@ -268,12 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:33:29.421522208Z",
-     "start_time": "2024-02-18T21:33:14.360818285Z"
+     "end_time": "2024-02-18T21:42:18.240383351Z",
+     "start_time": "2024-02-18T21:42:08.462525006Z"
     }
    },
    "outputs": [
@@ -282,7 +282,7 @@
      "output_type": "stream",
      "text": [
       "Using auto mode ::: Detected propositional requirements!\n",
-      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f6d81da0550>]\n",
+      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f33c0143290>]\n",
       "head 1 with old rules 1\n",
       "head 1 with new rules 1\n",
       "Generated 1 strata of constraints with None centrality\n",
@@ -290,7 +290,7 @@
       "Epoch 100, loss: 0.224294 [  100/  400]\n",
       "Epoch 200, loss: 0.110360 [  200/  400]\n",
       "Epoch 300, loss: 0.082923 [  300/  400]\n",
-      "Saved experiment at ./models/rectangles-1708292007\n"
+      "Saved experiment at ./models/rectangles-1708292535\n"
      ]
     },
     {
@@ -319,12 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:33:32.368259132Z",
-     "start_time": "2024-02-18T21:33:29.421036821Z"
+     "end_time": "2024-02-18T21:42:20.664949353Z",
+     "start_time": "2024-02-18T21:42:18.237083489Z"
     }
    },
    "outputs": [
