--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:42:08.018670025Z",
-     "start_time": "2024-02-18T21:42:08.001309632Z"
+     "end_time": "2024-02-18T21:50:50.794550295Z",
+     "start_time": "2024-02-18T21:50:49.483098912Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x7f33c44e9810>"
+      "text/plain": "<torch._C.Generator at 0x7ff6d6a717d0>"
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:42:08.046639304Z",
-     "start_time": "2024-02-18T21:42:08.018401428Z"
+     "end_time": "2024-02-18T21:50:50.795184892Z",
+     "start_time": "2024-02-18T21:50:50.791287050Z"
     }
    },
    "outputs": [],
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:42:08.227336110Z",
-     "start_time": "2024-02-18T21:42:08.047185570Z"
+     "end_time": "2024-02-18T21:50:51.019180785Z",
+     "start_time": "2024-02-18T21:50:50.791653142Z"
     }
    },
    "outputs": [
@@ -162,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:42:08.438333067Z",
-     "start_time": "2024-02-18T21:42:08.227200870Z"
+     "end_time": "2024-02-18T21:50:51.246235021Z",
+     "start_time": "2024-02-18T21:50:51.020361686Z"
     }
    },
    "outputs": [
@@ -193,24 +193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:42:08.463612323Z",
-     "start_time": "2024-02-18T21:42:08.454456210Z"
+     "end_time": "2024-02-18T21:50:51.262333805Z",
+     "start_time": "2024-02-18T21:50:51.251564466Z"
     }
    },
    "outputs": [],
    "source": [
     "class PiShield_NeuralNetwork(torch.nn.Module):\n",
-    "    def __init__(self, shapes, requirements_path, points=2500, batch_size=2500, learning_rate=1e-1, hidden_dim=20):\n",
+    "    def __init__(self, shapes, requirements_path, output_dim=2, points=2500, batch_size=2500, learning_rate=1e-1, hidden_dim=20):\n",
     "        super(PiShield_NeuralNetwork, self).__init__()\n",
     "\n",
     "        self.linear = nn.Sequential(\n",
     "            nn.Linear(2, hidden_dim),\n",
     "            nn.Tanh(),\n",
-    "            nn.Linear(hidden_dim, 2),\n",
+    "            nn.Linear(hidden_dim, output_dim),\n",
     "            nn.Sigmoid()\n",
     "        )\n",
     "        \n",
@@ -218,7 +218,7 @@
     "        self.loss_fn = nn.BCELoss()\n",
     "        self.optimizer = torch.optim.Adam(self.parameters(), lr = learning_rate, betas = (0.9, 0.999))\n",
     "        \n",
-    "        self.clayer = build_shield_layer(len(shapes), requirements_path, ordering_choice=None)\n",
+    "        self.clayer = build_shield_layer(output_dim, requirements_path, ordering_choice=None)\n",
     "        \n",
     "    def prepare_dataloaders(self, shapes, points, batch_size):\n",
     "        train_data = ShapeDataset(shapes, points)\n",
@@ -268,12 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:42:18.240383351Z",
-     "start_time": "2024-02-18T21:42:08.462525006Z"
+     "end_time": "2024-02-18T21:51:01.867311554Z",
+     "start_time": "2024-02-18T21:50:51.265184901Z"
     }
    },
    "outputs": [
@@ -282,7 +282,7 @@
      "output_type": "stream",
      "text": [
       "Using auto mode ::: Detected propositional requirements!\n",
-      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f33c0143290>]\n",
+      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7ff6d2107f10>]\n",
       "head 1 with old rules 1\n",
       "head 1 with new rules 1\n",
       "Generated 1 strata of constraints with None centrality\n",
@@ -290,7 +290,7 @@
       "Epoch 100, loss: 0.224294 [  100/  400]\n",
       "Epoch 200, loss: 0.110360 [  200/  400]\n",
       "Epoch 300, loss: 0.082923 [  300/  400]\n",
-      "Saved experiment at ./models/rectangles-1708292535\n"
+      "Saved experiment at ./models/rectangles-1708293059\n"
      ]
     },
     {
@@ -319,12 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T21:42:20.664949353Z",
-     "start_time": "2024-02-18T21:42:18.237083489Z"
+     "end_time": "2024-02-18T21:51:04.218587014Z",
+     "start_time": "2024-02-18T21:51:01.867669646Z"
     }
    },
    "outputs": [
