--- a/experiments/Rectangles_example.ipynb
+++ b/experiments/Rectangles_example.ipynb
@@ -23,14 +23,14 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T22:05:49.609284100Z",
-     "start_time": "2024-02-18T22:05:48.259147450Z"
+     "end_time": "2024-02-18T22:07:33.190625787Z",
+     "start_time": "2024-02-18T22:07:32.059183653Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x7f6fa3769810>"
+      "text/plain": "<torch._C.Generator at 0x7fd809bf17d0>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -64,8 +64,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T22:05:49.609965184Z",
-     "start_time": "2024-02-18T22:05:49.599212217Z"
+     "end_time": "2024-02-18T22:07:33.196543786Z",
+     "start_time": "2024-02-18T22:07:33.192412229Z"
     }
    },
    "outputs": [],
@@ -118,8 +118,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T22:05:49.807541795Z",
-     "start_time": "2024-02-18T22:05:49.599499054Z"
+     "end_time": "2024-02-18T22:07:33.436465742Z",
+     "start_time": "2024-02-18T22:07:33.201400275Z"
     }
    },
    "outputs": [
@@ -165,8 +165,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-18T22:05:50.054121737Z",
-     "start_time": "2024-02-18T22:05:49.810473556Z"
+     "end_time": "2024-02-18T22:07:33.649164340Z",
+     "start_time": "2024-02-18T22:07:33.437970516Z"
     }
    },
    "outputs": [
@@ -193,12 +193,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "from pishield.shield_layer import build_shield_layer"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T22:05:50.077319757Z",
-     "start_time": "2024-02-18T22:05:50.068228495Z"
+     "end_time": "2024-02-18T22:07:33.699592589Z",
+     "start_time": "2024-02-18T22:07:33.654831811Z"
+    }
+   },
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-18T22:07:33.700520745Z",
+     "start_time": "2024-02-18T22:07:33.699367045Z"
     }
    },
    "outputs": [],
@@ -268,12 +283,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T22:06:02.621961805Z",
-     "start_time": "2024-02-18T22:05:50.072780641Z"
+     "end_time": "2024-02-18T22:07:44.520530684Z",
+     "start_time": "2024-02-18T22:07:33.699636704Z"
     }
    },
    "outputs": [
@@ -282,7 +297,7 @@
      "output_type": "stream",
      "text": [
       "Using auto mode ::: Detected propositional requirements!\n",
-      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7f6f9f4db110>]\n",
+      "[] [<pishield.propositional_requirements.constraint.Constraint object at 0x7fd805270250>]\n",
       "head 1 with old rules 1\n",
       "head 1 with new rules 1\n",
       "Generated 1 strata of constraints with None centrality\n",
@@ -290,7 +305,7 @@
       "Epoch 100, loss: 0.224294 [  100/  400]\n",
       "Epoch 200, loss: 0.110360 [  200/  400]\n",
       "Epoch 300, loss: 0.082923 [  300/  400]\n",
-      "Saved experiment at ./models/rectangles-1708293959\n"
+      "Saved experiment at ./models/rectangles-1708294062\n"
      ]
     },
     {
@@ -319,12 +334,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-18T22:06:05.112967936Z",
-     "start_time": "2024-02-18T22:06:02.622824933Z"
+     "end_time": "2024-02-18T22:07:47.304921050Z",
+     "start_time": "2024-02-18T22:07:44.503235082Z"
     }
    },
    "outputs": [
